--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,29 +1,31 @@
 name: Go
-on: [push, pull_request]
+on: [push]
 jobs:
-    build:
-        name: Build Go
-        runs-on: ubuntu-latest
-        steps:
-            - name: Set up Go 1.12
-              uses: actions/setup-go@v1
-              with:
-                  go-version: 1.12
-              id: go
+  build:
+    name: Build Go
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go 1.12
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.12
+        id: go
 
-            - name: Check out code into the Go module directory
-              uses: actions/checkout@v1
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v1
 
-            - name: Get dependencies
-              run: |
-                  go get -v -t -d ./...
-                  if [ -f Gopkg.toml ]; then
-                      curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-                      dep ensure
-                  fi
+      - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
 
-            - name: Build
-              run: go build -v .
+      - name: Build
+        run: go build -v .
 
-            - name: tparse Version
-              run: tparse --version
+      - name: explore
+        run: ls -ltr
+
+      - name: tparse Version
+        run: ./tparse --version
+
+      - name: run tests
+        run: go test -race -v ./parse -json -cover | ./tparse -all -smallscreen
