--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,4 +34,4 @@ jobs:
         run: go build -v .
 
       - name: run tests
-        run: go test -race -v ./parse -json -cover | ./tparse -all -dump -top
+        run: go test -race ./parse -json -cover | ./tparse -all -top
