Add goreleaser and use runtime version

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,30 +1,50 @@
-# This is an example goreleaser.yaml file with some sane defaults.
-# Make sure to check the documentation at http://goreleaser.com
-before:
-  hooks:
-    # you may remove this if you don't need go generate
-    - go generate ./...
+# Documentation at https://goreleaser.com
+project_name: tparse
+
+gomod:
+  proxy: true
+
 builds:
   - env:
       - CGO_ENABLED=0
+    # main: .
+    binary: tparse
     goos:
       - linux
       - windows
       - darwin
+    goarch:
+      - amd64
+      - arm64
+    # Custom ldflags templates.
+    # Default is `-s -w -X main.version={{.Version}} -X main.commit={{.Commit}} -X main.date={{.Date}} -X main.builtBy=goreleaser`.
+    ldflags:
+      - -s -w
+
+# You can disable this pipe in order to not upload any artifacts.
+# Defaults to false.
+release:
+  disable: false
+
 archives:
   - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
       386: i386
       amd64: x86_64
+    name_template: "{{ tolower .Binary }}_{{ tolower .Os }}_{{ tolower .Arch }}"
+    format: binary
+
 checksum:
-  name_template: 'checksums.txt'
+  name_template: "checksums.txt"
+
 snapshot:
-  name_template: '{{ .Tag }}-next'
+  name_template: "{{ incpatch .Version }}-next"
+
 changelog:
+  use: github
   sort: asc
+  # Commit messages matching the regexp listed here will be removed from
+  # the changelog.
   filters:
     exclude:
-      - '^docs:'
-      - '^test:'
+      - "^docs:"
+      - "^test:"
