--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           go-version: ${{ matrix.go }}
 
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Build
         run: go build -v .
@@ -33,3 +33,8 @@ jobs:
 
       - name: Run tparse w/ std lib
         run: go test -count=1 fmt strings bytes bufio crypto log mime sort time -json -cover | ./tparse -pass
+
+      - name: Run tparse w/ std lib
+        run: |
+          go test -count=1 fmt strings bytes bufio crypto log mime sort time -json -cover |\ 
+            ./tparse  -notests -follow -format=markdown -all >> $GITHUB_STEP_SUMMARY
