--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         run: go build -v .
 
       - name: Run tests
-        run: go test -count=1 -race ./parse -json -cover | ./tparse -all -top
+        run: go test -count=1 -race ./parse -json -cover | ./tparse -notests -follow
 
       - name: Run tparse w/ std lib
         run: go test -count=1 fmt strings bytes bufio crypto log mime sort time -json -cover | ./tparse -pass
