--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,8 @@ jobs:
 
       - name: Run tests with GITHUB_STEP_SUMMARY
         run: |
-          go test -count=1 -race ./... -json -cover -coverpkg=./... | tee output.json | ./tparse -notests -follow -all
-          NO_COLOR=1 ./tparse -format markdown -file output.json -all > $GITHUB_STEP_SUMMARY
+          go test -count=1 -race ./... -json -coverpkg github.com/mfridman/tparse/parse  | tee output.json | ./tparse -notests -follow -all
+          NO_COLOR=1 ./tparse -format markdown -file output.json -all -slow 5 > $GITHUB_STEP_SUMMARY
 
       - name: Run tparse w/ std lib
         run: go test -count=1 fmt strings bytes bufio crypto log mime sort time -json -cover | ./tparse -follow -all
