--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go: ["1.17","1.18"]
+        go-version: [1.17, 1.18, 1.19.0-rc.2]
     env:
       VERBOSE: 1
 
