Use JSONL format for New Line Delimited JSON
https://en.wikipedia.org/wiki/JSON_streaming

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,10 +29,10 @@ jobs:
       - name: Run tests with GITHUB_STEP_SUMMARY
         # Note the use of  || true. This so the job doesn't fail at that line. We want to preserve -follow
         # as part of the test output, but not output it to the summary page, which is done in the proceeding
-        # command when we parse the output.json file.
+        # command when we parse the output.jsonl file.
         run: |
           go test -v -count=1 -race ./... -json -coverpkg github.com/mfridman/tparse/parse \
-            | tee output.json | ./tparse -notests -follow -all || true
-          ./tparse -format markdown -file output.json -all -slow 20 > $GITHUB_STEP_SUMMARY
+            | tee output.jsonl | ./tparse -notests -follow -all || true
+          ./tparse -format markdown -file output.jsonl -all -slow 20 > $GITHUB_STEP_SUMMARY
       - name: Run tparse w/ std lib
         run: go test -count=1 fmt strings bytes bufio crypto log mime sort time -json -cover | ./tparse -follow -all
