--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,7 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ['oldstable', 'stable', '1.23.0-rc.2']
+        # go-version: ['oldstable', 'stable', '1.23.0-rc.2']
+        go-version: ['oldstable', 'stable']
     env:
       VERBOSE: 1
 
