--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -37,7 +37,7 @@ jobs:
             | tee output.jsonl | ./tparse -notests -follow -all || true
           ./tparse -format markdown -file output.jsonl -all -slow 20 > $GITHUB_STEP_SUMMARY
       - name: Run tparse w/ std lib
-        run: go test -count=1 fmt strings bytes bufio crypto log mime sort slices unique -json -cover | ./tparse -follow -all
+        run: go test -count=1 fmt strings bytes bufio crypto log mime sort slices -json -cover | ./tparse -follow -all
       - name: Install GoReleaser
         if: github.event_name == 'push' && github.ref == 'refs/heads/main' && matrix.go-version == 'stable'
         uses: goreleaser/goreleaser-action@v6
